--- a/app/views/admin/file/imagelist.scala.html
+++ b/app/views/admin/file/imagelist.scala.html
@@ -35,7 +35,7 @@
                     </ul>
                 }
                 </td>
-                <td><a href="@controllers.admin.routes.AdminFileController.deleteImage(image.objectId)">@Messages("file.list.delete")</a></td>
+                <td><a href="@controllers.admin.routes.AdminFileController.deleteImage(image.objectId)">@Messages("admin.file.list.delete")</a></td>
             </tr>
         }
         </tbody>
