--- a/app/views/contentcolumns/onecolumn.scala.html
+++ b/app/views/contentcolumns/onecolumn.scala.html
@@ -16,7 +16,7 @@
 
                 <!-- Banner -->
             <div class="col-xs-12 col-md-3 col-banner">
-            @shared.banner("images/banners/banner-0001.png","http://www.bannertarget.se","Senaste nyheterna","Senaste nyheterna")
+            @shared.banner()
             </div>
         </div>
     </div>
