--- a/app/views/mainedit.scala.html
+++ b/app/views/mainedit.scala.html
@@ -3,7 +3,7 @@
 
 <html lang="@Messages("main.language")">
     <head>
-        <title>@title - @Messages("edit.title")</title>
+        <title>@title - @Messages("admin.title")</title>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,19 +16,19 @@
         <div id="wrap">
             <div class="container-fluid">
                 <div class="navbar-static-top">
-                    <a class="navbar-brand" href="#">@Messages("edit.menu.title")</a>
+                    <a class="navbar-brand" href="#">@Messages("admin.menu.title")</a>
                     <ul class="nav navbar-nav">
-                        <li><a href="@controllers.admin.routes.AdminContentController.editIndex()">@Messages("edit.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminRecipeController.editIndex()">@Messages("edit.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminCountyController.editIndex()">@Messages("edit.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminTagWordController.editIndex()">@Messages("edit.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("edit.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("edit.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminFileController.editIndex()">@Messages("edit.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
-                        <li><a href="@controllers.admin.routes.AdminReleaseController.editIndex()">@Messages("edit.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminContentController.editIndex()">@Messages("admin.menu.pages")&nbsp;<span class="glyphicon glyphicon-file"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminRecipeController.editIndex()">@Messages("admin.menu.recipe")&nbsp;<span class="glyphicon glyphicon-leaf"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminCountyController.editIndex()">@Messages("admin.menu.county")&nbsp;<span class="glyphicon glyphicon-road"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminTagWordController.editIndex()">@Messages("admin.menu.tagword")&nbsp;<span class="glyphicon glyphicon-bookmark"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("admin.menu.users")&nbsp;<span class="glyphicon glyphicon-user"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("admin.menu.roles")&nbsp;<span class="glyphicon glyphicon-lock"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminFileController.editIndex()">@Messages("admin.menu.files")&nbsp;<span class="glyphicon glyphicon-picture"></span></a></li>
+                        <li><a href="@controllers.admin.routes.AdminReleaseController.editIndex()">@Messages("admin.menu.release")&nbsp;<span class="glyphicon glyphicon-asterisk"></span></a></li>
                     </ul>
                     <ul class="nav navbar-nav pull-right">
-                        <li><a href="@routes.StartPageController.index()"><span class="glyphicon glyphicon-globe"></span>&nbsp;@Messages("edit.menu.backtosite")</a></li>
+                        <li><a href="@routes.StartPageController.index()"><span class="glyphicon glyphicon-globe"></span>&nbsp;@Messages("admin.menu.backtosite")</a></li>
                     </ul>
                 </div>
             </div>
