--- a/app/views/profile/skapa.scala.html
+++ b/app/views/profile/skapa.scala.html
@@ -26,7 +26,7 @@
                                     'id -> "name",
                                     '_showErrors -> true,
                                     '_label -> Messages("profile.create.form.profilename"),
-                                    '_help -> Html(Messages("profile.create.form.profilename.help"))
+                                    '_help -> (Html(Messages("profile.create.form.profilename.help")))
                                 )
                             </li>
                             <li class="list-group-item">
