--- a/app/views/shared/banner.scala.html
+++ b/app/views/shared/banner.scala.html
@@ -1,4 +1,4 @@
-@(imgPath: String, linkPath: String, alt: String, title: String)
+@(imgPath: String = "images/banners/banner-0001.png", linkPath: String = "http://www.bannertarget.se", alt: String = "Senaste nyheterna", title: String = "Senaste nyheterna")
 
 <div class="banner">
     <div class="banner-header">@Messages("banner.header")</div>
