--- a/app/views/shared/grade.scala.html
+++ b/app/views/shared/grade.scala.html
@@ -1,4 +1,13 @@
-@(inputId: String, initialValue: Int = 0, readOnly: Boolean = false, disabled: Boolean = false, size: String = "xs", showClear: Boolean = false, showCaption: Boolean = false, cssClass: String = "")
+@(inputId: String,
+        initialValue: Int = 0,
+        readOnly: Boolean = false,
+        disabled: Boolean = false,
+        size: String = "xs",
+        showClear: Boolean = false,
+        showCaption: Boolean = false,
+        cssClass: String = "",
+        showNrOfRatings: Boolean = false,
+        nrOfRatings: Int = 0)
 @*
 Values for size:
 "xxs", "xs", "sm", "md", "lg", "xl"
@@ -6,7 +15,8 @@ http://plugins.krajee.com/star-rating/demo
 @Messages("rating.1");@Messages("rating.2");@Messages("rating.3");@Messages("rating.4");@Messages("rating.5")
 *@
 
-<div class="grade hdc-grade">
-    <input id="@inputId" type="number" class="rating @cssClass" value="@initialValue" min="0" max="5" step="1" data-disabled="@disabled" data-show-caption="@showCaption" data-show-clear="@showClear" data-readonly="@readOnly" data-star-captions="{}" data-default-caption="{rating} @Messages("grade.rating-text")" data-size="@size">
-    @if(disabled != true && readOnly != true){<button class="btn btn-primary float-left">@Messages("grade.submit")</button>}
+<div class="grade hdc-grade @cssClass">
+    <input id="@inputId" type="number" class="rating" value="@initialValue" min="0" max="5" step="1" data-disabled="@disabled" data-show-caption="@showCaption" data-show-clear="@showClear" data-readonly="@readOnly" data-star-captions="" data-default-caption="{rating} @Messages("grade.rating-text")" data-size="@size">
+    @if(showNrOfRatings){<div class="nr-of-ratings clearfix">@Messages("grade.nr-of-ratings", nrOfRatings)</div>}
+    @if(disabled != true && readOnly != true){<button class="btn btn-primary">@Messages("grade.submit")</button>}
 </div>
