--- a/app/views/admin/content/list.scala.html
+++ b/app/views/admin/content/list.scala.html
@@ -1,22 +1,22 @@
 @(contentList: Option[List[models.content.ContentPage]])
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-        <h1 class="page-header">@Messages("edit.content.list.header")</h1>
-        <p><a href="@controllers.admin.routes.AdminContentController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
+        <h1 class="page-header">@Messages("admin.content.list.header")</h1>
+        <p><a href="@controllers.admin.routes.AdminContentController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <th>@Messages("edit.content.list.created_date")</th>
-                    <th>@Messages("edit.content.list.contentstate")</th>
-                    <th>@Messages("edit.content.list.route")</th>
-                    <th>@Messages("edit.content.list.name")</th>
-                    <th>@Messages("edit.content.list.parent")</th>
-                    <th>@Messages("edit.content.list.visibility")</th>
-                    <th>@Messages("edit.content.list.action")</th>
+                    <th>@Messages("admin.content.list.created_date")</th>
+                    <th>@Messages("admin.content.list.contentstate")</th>
+                    <th>@Messages("admin.content.list.route")</th>
+                    <th>@Messages("admin.content.list.name")</th>
+                    <th>@Messages("admin.content.list.parent")</th>
+                    <th>@Messages("admin.content.list.visibility")</th>
+                    <th>@Messages("admin.content.list.action")</th>
                 </tr>
             </thead>
 
@@ -32,8 +32,8 @@
                         <td>@contentPage.visibleInMenus.booleanValue().toString</td>
                         <td>
                             <ul class="nav nav-pills">
-                                <li><a href="@controllers.admin.routes.AdminContentController.edit(contentPage.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("edit.actions.edit")</a></li>
-                                <li><a href="@controllers.admin.routes.AdminContentController.delete(contentPage.objectId)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("edit.actions.delete")</a></li>
+                                <li><a href="@controllers.admin.routes.AdminContentController.edit(contentPage.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("admin.actions.edit")</a></li>
+                                <li><a href="@controllers.admin.routes.AdminContentController.delete(contentPage.objectId)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("admin.actions.delete")</a></li>
                             </ul>
                         </td>
                     </tr>
