--- a/app/views/admin/county/index.scala.html
+++ b/app/views/admin/county/index.scala.html
@@ -1,12 +1,12 @@
 @()(implicit flash: Flash)
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.county.index.header")</h1>
-            <p><a href="@controllers.admin.routes.AdminCountyController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
-            <p><a href="@controllers.admin.routes.AdminCountyController.listAll()" class="btn-primary">@Messages("edit.actions.list")</a></p>
+            <h1 class="page-header">@Messages("admin.county.index.header")</h1>
+            <p><a href="@controllers.admin.routes.AdminCountyController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
+            <p><a href="@controllers.admin.routes.AdminCountyController.listAll()" class="btn-primary">@Messages("admin.actions.list")</a></p>
         </div>
     </div>
 
