--- a/app/views/admin/recipe/list.scala.html
+++ b/app/views/admin/recipe/list.scala.html
@@ -1,17 +1,17 @@
 @(recipeList: List[models.Recipe])
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-        <h1 class="page-header">@Messages("edit.recipe.list.header")</h1>
-        <p><a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
+        <h1 class="page-header">@Messages("admin.recipe.list.header")</h1>
+        <p><a href="@controllers.admin.routes.AdminRecipeController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
 
         <table class="table table-striped table-hover table-bordered">
             <thead>
                 <tr>
-                    <th>@Messages("edit.recipe.list.name")</th>
-                    <th>@Messages("edit.recipe.list.action")</th>
+                    <th>@Messages("admin.recipe.list.name")</th>
+                    <th>@Messages("admin.recipe.list.action")</th>
                 </tr>
             </thead>
 
@@ -21,8 +21,8 @@
                     <td>@recipe.name</td>
                     <td>
                         <ul class="nav nav-pills">
-                            <li><a href="@controllers.admin.routes.AdminRecipeController.edit(recipe.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("edit.actions.edit")</a></li>
-                            <li><a href="@controllers.admin.routes.AdminRecipeController.delete(recipe.objectId)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("edit.actions.delete")</a></li>
+                            <li><a href="@controllers.admin.routes.AdminRecipeController.edit(recipe.objectId)"><span class="glyphicon glyphicon-edit"></span>&nbsp;@Messages("admin.actions.edit")</a></li>
+                            <li><a href="@controllers.admin.routes.AdminRecipeController.delete(recipe.objectId)"><span class="glyphicon glyphicon-trash"></span>&nbsp;@Messages("admin.actions.delete")</a></li>
                         </ul>
                     </td>
                 </tr>
