--- a/app/views/admin/roles/add.scala.html
+++ b/app/views/admin/roles/add.scala.html
@@ -1,19 +1,19 @@
 @(userRoleForm: Form[models.viewmodels.UserRoleForm])(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.roles.add.header")</h1>
+            <h1 class="page-header">@Messages("admin.roles.add.header")</h1>
             @helper.form(action=controllers.admin.routes.AdminUserRoleController.addSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-horizontal"){
                 <fieldset>
-                    @helper.inputText(userRoleForm("name"), '_label -> Messages("edit.roles.add.name"), '_help -> Messages("edit.roles.add.name.validation"))
+                    @helper.inputText(userRoleForm("name"), '_label -> Messages("admin.roles.add.name"), '_help -> Messages("admin.roles.add.name.validation"))
                     @helper.inputHidden(userRoleForm("id"))
                 </fieldset>
                 <div class="form-actions">
-                    <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("edit.add.abort")</a>
+                    <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
+                    <a class="btn" href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("admin.add.abort")</a>
                 </div>
             }
         </div>
