--- a/app/views/admin/roles/addUserToRole.scala.html
+++ b/app/views/admin/roles/addUserToRole.scala.html
@@ -4,25 +4,25 @@
 
 @import helper.twitterBootstrap._
 
-@mainedit(Messages("edit.title")) {
+@mainedit(Messages("admin.title")) {
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.roles.addusertorole.header")</h1>
+            <h1 class="page-header">@Messages("admin.roles.addusertorole.header")</h1>
             @if(optionRoles.nonEmpty && optionUsers.nonEmpty) {
                 @helper.form(action = controllers.admin.routes.AdminUserRoleController.addUserToRoleSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-horizontal") {
                     <fieldset>
-                        @helper.select(userAddToRoleForm("userObjectId"), optionUsers.get, '_label -> Messages("edit.roles.addusertorole.user"), '_help -> Messages("edit.roles.addusertorole.user.validation"))
-                        @helper.select(userAddToRoleForm("roleObjectId"), optionRoles.get, '_label -> Messages("edit.roles.addusertorole.role"), '_help -> Messages("edit.roles.addusertorole.role.validation"))
-                        @helper.checkbox(userAddToRoleForm("addOrRemoveRole"), '_label -> Messages("edit.roles.addusertorole.addorremove"), '_showConstraints -> false)
+                        @helper.select(userAddToRoleForm("userObjectId"), optionUsers.get, '_label -> Messages("admin.roles.addusertorole.user"), '_help -> Messages("admin.roles.addusertorole.user.validation"))
+                        @helper.select(userAddToRoleForm("roleObjectId"), optionRoles.get, '_label -> Messages("admin.roles.addusertorole.role"), '_help -> Messages("admin.roles.addusertorole.role.validation"))
+                        @helper.checkbox(userAddToRoleForm("addOrRemoveRole"), '_label -> Messages("admin.roles.addusertorole.addorremove"), '_showConstraints -> false)
                     </fieldset>
                     <div class="form-actions">
-                        <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                        <a class="btn" href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("edit.add.abort")</a>
+                        <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
+                        <a class="btn" href="@controllers.admin.routes.AdminUserRoleController.editIndex()">@Messages("admin.add.abort")</a>
                     </div>
                 }
             } else {
-                @Messages("edit.roles.addusertorole.nocontent")
+                @Messages("admin.roles.addusertorole.nocontent")
             }
         </div>
     </div>
