--- a/app/views/admin/roles/index.scala.html
+++ b/app/views/admin/roles/index.scala.html
@@ -1,13 +1,13 @@
 @()(implicit flash: Flash)
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.roles.index.header")</h1>
-            <p><a href="@controllers.admin.routes.AdminUserRoleController.add()" class="btn-primary">@Messages("edit.actions.add")</a></p>
-            <p><a href="@controllers.admin.routes.AdminUserRoleController.addUserToRole()" class="btn-primary">@Messages("edit.actions.addusertorole")</a></p>
-            <p><a href="@controllers.admin.routes.AdminUserRoleController.listAll()" class="btn-primary">@Messages("edit.actions.list")</a></p>
+            <h1 class="page-header">@Messages("admin.roles.index.header")</h1>
+            <p><a href="@controllers.admin.routes.AdminUserRoleController.add()" class="btn-primary">@Messages("admin.actions.add")</a></p>
+            <p><a href="@controllers.admin.routes.AdminUserRoleController.addUserToRole()" class="btn-primary">@Messages("admin.actions.addusertorole")</a></p>
+            <p><a href="@controllers.admin.routes.AdminUserRoleController.listAll()" class="btn-primary">@Messages("admin.actions.list")</a></p>
         </div>
     </div>
 
