--- a/app/views/admin/usercredential/add.scala.html
+++ b/app/views/admin/usercredential/add.scala.html
@@ -1,21 +1,21 @@
 @(userCredForm: Form[models.viewmodels.UserCredentialForm])(implicit flash: Flash)
 @import helper.twitterBootstrap._
 
-@mainedit(Messages("edit.title")){
+@mainedit(Messages("admin.title")){
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="page-header">@Messages("edit.usercredential.add.header")</h1>
+            <h1 class="page-header">@Messages("admin.usercredential.add.header")</h1>
             @helper.form(action=controllers.admin.routes.AdminUserCredentialController.editSubmit(), 'enctype -> "multipart/form-data", 'class -> "form-horizontal"){
                 <fieldset>
-                    @helper.inputText(userCredForm("firstname"), '_label -> Messages("edit.usercredential.add.firstname"), '_help -> Messages("edit.usercredential.add.firstname.validation"))
-                    @helper.inputText(userCredForm("lastname"), '_label -> Messages("edit.usercredential.add.lastname"), '_help -> Messages("edit.usercredential.add.lastname.validation"))
-                    @helper.inputText(userCredForm("emailaddress"), '_label -> Messages("edit.usercredential.add.emailaddress"), '_help -> Messages("edit.usercredential.add.emailaddress.validation"))
+                    @helper.inputText(userCredForm("firstname"), '_label -> Messages("admin.usercredential.add.firstname"), '_help -> Messages("admin.usercredential.add.firstname.validation"))
+                    @helper.inputText(userCredForm("lastname"), '_label -> Messages("admin.usercredential.add.lastname"), '_help -> Messages("admin.usercredential.add.lastname.validation"))
+                    @helper.inputText(userCredForm("emailaddress"), '_label -> Messages("admin.usercredential.add.emailaddress"), '_help -> Messages("admin.usercredential.add.emailaddress.validation"))
                     @helper.inputHidden(userCredForm("id"))
                 </fieldset>
                 <div class="form-actions">
-                    <button class="btn btn-primary" type="submit">@Messages("edit.add.save")</button>
-                    <a class="btn" href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("edit.add.abort")</a>
+                    <button class="btn btn-primary" type="submit">@Messages("admin.add.save")</button>
+                    <a class="btn" href="@controllers.admin.routes.AdminUserCredentialController.editIndex()">@Messages("admin.add.abort")</a>
                 </div>
             }
         </div>
