--- a/app/views/recipe/recipe.scala.html
+++ b/app/views/recipe/recipe.scala.html
@@ -72,7 +72,7 @@
 
                 <!-- Banner -->
             <div class="col-xs-12 col-md-3 col-banner">
-            @shared.banner("images/banners/banner-0001.png","http://www.bannertarget.se","Senaste nyheterna","Senaste nyheterna")
+                @shared.banner()
             </div>
         </div>
     </div>
